@@ -5,6 +5,11 @@ Changelog
 1.3 (unreleased)
 ----------------
 
+- Component registry layer: use isolated ZCML layers.
+  When using the same layer instances it may conflict with integration or
+  functional testing layers.
+  [jone]
+
 - Add splinter integration and Plone page objects.
   [jone]
 
